2007-04-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/include/vncview.h:
	* lib/src/vncview.cpp:
	on focus-out-event release keyboard-grab and system-key-trapping and
	get them back at focus-in-event

	* lib/include/system_key_trapper.h:
	* lib/src/system_key_trapper.cpp:
	added possibility to dynamically enable or disable trapping of
	system-keys

	* ima/src/tool_button.cpp:
	draw button more dark if checked/pressed

	* ima/src/remote_control_widget.cpp:
	* ima/src/remote_control_widget.h:
	- reworked texts in toolbar
	- when in window mode, show maximized per default
	- lot of cleanups

	* setup/src/dialogs.cpp:
	fixed installation of italc_core.dll under win32

	* ima/src/remote_control_widget.cpp:
	do not resize to desktop-geometry in window-mode

2007-04-22	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/main_window.cpp:
	* ima/src/main_window.h:
	* ima/src/client.cpp:
	do not reload clients if remote-control is active

	* common/:
	renamed to "lib"

	* common/include/local_system.h:
	* common/include/isd_connection.h:
	* common/include/isd_base.h:
	* common/src/isd_connection.cpp:
	* common/src/local_system.cpp:
	* common/italc_core.qrc:
	* common/resources/es.ts:
	* common/resources/fr.ts:
	* common/resources/it.ts:
	* common/resources/de.ts:
	* ica/src/ica_main.cpp:
	* ica/src/isd_server.cpp:
	* ica/src/isd_server.h:
	changes for new library-infrastructure

	* ica/src/progress_widget.cpp:
	* ica/src/progress_widget.h:
	* ica/src/lzoconf.h:
	* ica/src/vncview.cpp:
	* ica/src/vncview.h:
	* ica/src/minilzo.c:
	* ica/src/minilzo.h:
	* ica/src/system_key_trapper.cpp:
	* ica/src/system_key_trapper.h:
	* ica/src/lock_widget.cpp:
	* ica/src/lock_widget.h:
	moved to common

	* ica/Makefile.am:
	* ima/Makefile.am:
	* setup/Makefile.am:
	* common/Makefile.am:
	* setup/src/main.cpp:
	made all code in common-dir a shared library which all components are
	linked against

	* ima/italc.qrc:
	* ima/src/main.cpp: